Remove local.meta Add initial code for handling key value pair outputs

--- a/TA-cdis-hl7/default/props.conf
+++ b/TA-cdis-hl7/default/props.conf
@@ -1,8 +1,2 @@
 [hl7]
-SHOULD_LINEMERGE = false
-
-[hl7_modular_input]
-SHOULD_LINEMERGE = false
-
-[test]
-SHOULD_LINEMERGE = false
+DATETIME_CONFIG = NONE
